SEO ve Yazım Düzeltmeleri

--- a/gorsel.html
+++ b/gorsel.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Görsel Sanatlar - Sirac Koleji</title>
+  <title>Görsel Sanatlar ve Ahşap Atölyesi - 18 Mart Sirac Koleji</title>
+  <meta name="description" content="18 Mart Sirac Koleji'nde öğrencilerimiz, görsel sanatlar ve ahşap atölyesi ile yaratıcılıklarını geliştirir, estetik algılarını güçlendirir ve el becerilerini en üst düzeye çıkarır.">
+  <meta name="keywords" content="görsel sanatlar, ahşap atölyesi, sanat eğitimi, yaratıcılık, el becerisi, estetik algı, Çanakkale özel okul, Sirac Koleji">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -28,17 +30,17 @@
         <ul class="navbar-nav ms-auto">
           <!-- Anasayfa -->
           <li class="nav-item">
-            <a class="nav-link" href="index">Anasayfa</a>
+            <a class="nav-link" href="index.html">Anasayfa</a>
           </li>
 
           <!-- Kurumsal -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Kurumsal</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="anlayis">Eğitim Anlayışımız</a></li>
-              <li><a class="dropdown-item" href="misyon">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item" href="tarihce">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur">Okul Kültürü</a></li>
+              <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
+              <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
+              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
+              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
             </ul>
           </li>
 
@@ -46,10 +48,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="manevi">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item" href="degerler">Değerler Eğitimi</a></li>
-              <li><a class="dropdown-item" href="yabancidil">Yabancı Dil</a></li>
-              <li><a class="dropdown-item" href="rehberlik">Rehberlik</a></li>
+              <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
+              <li><a class="dropdown-item" href="degerler.html">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
+              <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
             </ul>
           </li>
 
@@ -57,11 +59,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Atölyeler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="robotik">Robotik Kodlama</a></li>
-              <li><a class="dropdown-item active" href="gorsel">Görsel Sanatlar ve Ahşap</a></li>
-              <li><a class="dropdown-item" href="mutfak">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf">Tasavvuf Müziği</a></li>
-              <li><a class="dropdown-item" href="kozmik">Montessori Kozmik</a></li>
+              <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
+              <li><a class="dropdown-item active" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
+              <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
+              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
             </ul>
           </li>
 
@@ -69,15 +71,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="oyun">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulupler">Kulüpler ve P4C</a></li>
-              <li><a class="dropdown-item" href="sosyalyardim">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="helal-ve-saglikli">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
+              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
+              <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link " href="galeri">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link" href="iletisim">İletişim</a></li>
+           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
         </ul>
       </div>
     </div>
@@ -248,11 +250,11 @@
       <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">Hızlı Linkler</h5>
         <ul class="footer-links list-unstyled">
-          <li><a href="index">Anasayfa</a></li>
-          <li><a href="tarihce">Kurumsal</a></li>
-          <li><a href="galeri">Galeri</a></li>
-          <li><a href="iletisim">İletişim</a></li>
-          <li><a href="rehberlik">Rehberlik</a></li>
+          <li><a href="index.html">Anasayfa</a></li>
+          <li><a href="tarihce.html">Kurumsal</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
+          <li><a href="iletisim.html">İletişim</a></li>
+          <li><a href="rehberlik.html">Rehberlik</a></li>
         </ul>
       </div>
       
