--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ana Sayfa - Sirac Koleji</title>
+  <title>Ana Sayfa - 18 Mart Sirac Koleji - Çanakkale Özel Okul</title>
+  <meta name="description" content="Çanakkale'nin önde gelen özel okullarından 18 Mart Sirac Koleji, Montessori destekli eğitim anlayışıyla geleceğe yön veren, erdemli ve üretken nesiller yetiştirir.">
+  <meta name="keywords" content="Çanakkale özel okul, Sirac Koleji, Montessori eğitimi, değerler eğitimi, manevi eğitim, robotik kodlama, yabancı dil, anaokulu, ilkokul">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -95,7 +97,7 @@
 <section class="hero-video-section position-relative text-white d-flex align-items-center" style="height: 100vh; overflow: hidden;">
   <!-- Video Background -->
   <video autoplay muted loop playsinline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover z-n1">
-    <source src="../image/okul görseli/OKULVIDOU.mp4" type="video/mp4">
+    <source src="../image/okul görseli/OKULVIDOU.mp4" type="video/mp4" title="18 Mart Sirac Koleji Tanıtım Videosu">
     Tarayıcınız video etiketini desteklemiyor.
   </video>
 
@@ -249,7 +251,7 @@
                 <div class="customer">
                     <img src="https://randomuser.me/api/portraits/men/41.jpg" alt="Müşteri" class="customer-img">
                     <div class="customer-info">
-                        <h4>varol Arslan</h4>
+                        <h4>Varol Arslan</h4>
                         <p>Efe'nin Babası</p>
                     </div>
                 </div>
