--- a/kozmik.html
+++ b/kozmik.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kozmik Atölyesi - Sirac Koleji</title>
+  <title>Montessori Kozmik Atölyesi - 18 Mart Sirac Koleji</title>
+  <meta name="description" content="18 Mart Sirac Koleji'nin Montessori Kozmik Atölyesi'nde öğrencilerimiz, özel olarak tasarlanmış materyallerle evreni, dünyayı ve bilimi keşfederler. Kendi hızlarında öğrenir, derinlemesine bilgi sahibi olurlar.">
+  <meta name="keywords" content="Montessori, kozmik eğitim, Montessori atölyesi, bireysel öğrenme, somut materyaller, Çanakkale özel okul, Sirac Koleji">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -103,15 +105,15 @@
         <figcaption>Montessori materyallerine kolay erişim ve düzen</figcaption>
       </figure>
       <p>
-        18 Mart Sirac Koleji'nde Montessori Sistemi atölye bazında oluşturulmuştur. Atölyenin eğitim ortamı kazanımlara göre hazırlanmış çevre olarak tasarlanmıştır. Öğrencinin ihtiyacına göre materyal ihtiyacı karşılanmış ve öğrencinin kolaylıkla erişebileceği raf düzeninde iyileştirilmiştir. Öğrenci atölyenin düzeninde aktif rol alır. Atölye içerisinde materyal düzeni için görev paylaşımında bulunurlar.
+        18 Mart Sirac Koleji'nde Montessori Sistemi, atölye bazında yapılandırılmıştır. Atölye, eğitim kazanımlarına uygun olarak hazırlanmış bir çevre olarak tasarlanmıştır. Öğrencilerin materyal ihtiyacı karşılanmış ve materyallere kolayca erişebilmeleri için özel bir raf düzeni oluşturulmuştur. Öğrenciler, atölye düzeninde aktif rol alarak materyallerin sorumluluğunu paylaşırlar.
       </p>
 
       <p>
-        Montessori öğrencisi her an ya zihinsel ya da fiziksel olarak sürekli aktiftir. Öğrenmek için materyallere ihtiyaç duyar. Materyaller aracılığıyla kendi kendine öğrencidir. Bilgiyi keşfetmesi, deneyerek, kontrol ederek bilgiye ulaşması beklenir. Montessori atölyesinde günlük 2 derslik çalışma döngüsü vardır. Öğrenci bu sürede özgür seçimlerini kullanarak, istediği alanda, istediği süre miktarınca çalışma imkanı bulur. Odaklandığı andan kopmaz, derinleşebilir ve başladığı çalışma dönüşümü bu süre içerisinde rahatça bitirebilir.
+        Montessori öğrencisi, zihinsel veya fiziksel olarak sürekli aktiftir ve öğrenmek için materyallere ihtiyaç duyar. Materyaller aracılığıyla kendi kendine öğrenme sürecini yönetir; bilgiyi keşfetmesi, deneyerek ve kontrol ederek öğrenmesi hedeflenir. Montessori atölyesinde günlük iki derslik kesintisiz bir çalışma döngüsü uygulanır. Bu süre zarfında öğrenciler, özgür seçimlerini kullanarak istedikleri alanda, diledikleri kadar çalışma imkânı bulur. Bu sayede odaklandıkları işten kopmaz, konuda derinleşebilir ve başladıkları çalışmayı rahatça tamamlayabilirler.
       </p>
 
       <p>
-        Montessori öğretmeni sınıf içerisinde gözlemci ve gerektiğinde müdahaleci rolündedir. Öğretmen öğrenciyle materyali nasıl kullanacağını gösterir ve geriye çekilir. Öğrenciler bilgiyi somut bir şekilde kavrar, pekiştirir ve yazılı çalışmalarını tamamlamak için sınıflarına geri dönerler.
+        Montessori öğretmeni, sınıf içinde bir gözlemci ve rehber rolündedir. Öğretmen, öğrenciye materyalin nasıl kullanılacağını gösterdikten sonra geri çekilir. Öğrenciler, bilgiyi somut bir şekilde kavrar, pekiştirir ve ardından yazılı çalışmalarını tamamlamak üzere sınıflarına dönerler.
       </p>
     </article>
 
@@ -125,15 +127,15 @@
       </p>
 
       <p>
-        100 yılı aşkındır modası geçmeyen ve dünyanın dört bir köşesinde hala yankılanan ve etkisi giderek büyüyen Montessori felsefesi eğitimcilerin, ebeveynlerin dikkatini çekmektedir. 2000'li yılların başından bu yana yapılan araştırmalar, açılan Montessori okulları Türkiye'de de farklı eğitim sistemlerinin yer edindiğini göstermektedir.
+        100 yılı aşkın süredir güncelliğini koruyan ve dünyanın dört bir yanında yankı uyandıran Montessori felsefesi, eğitimcilerin ve ebeveynlerin dikkatini çekmeye devam etmektedir. 2000'li yılların başından bu yana yapılan araştırmalar ve açılan okullar, Türkiye'de de bu farklı eğitim sisteminin yer edindiğini göstermektedir.
       </p>
 
       <p>
-        Her yeni sistem doğduğu coğrafyanın özünden, kültüründen ve inançlarından etkilenmektedir. Montessori sistemi ise sadece çocuğu merkeze alan bir sistemdir ve evrensel öğretileri vardır. Buna rağmen yine de hangi ülke olursa olsun bir sistemi içinde barındırırken kendi kültürünü, yaşayışını ve inançlarını harmanlamak ister. Türkiye'deki Montessori okulları sistemin metotlarına bağlı kalmakta ve eğitim uygulamalarında ise birbirlerinden farklılıklar göstermektedirler.
+        Her eğitim sistemi, doğduğu coğrafyanın kültüründen ve inançlarından etkilenir. Montessori sistemi ise çocuğu merkeze alan evrensel öğretilere sahiptir. Buna rağmen, her ülke bu sistemi kendi bünyesine alırken kendi kültürünü, yaşam tarzını ve inançlarını da harmanlamak ister. Türkiye'deki Montessori okulları, sistemin metotlarına bağlı kalmakla birlikte eğitim uygulamalarında birbirlerinden farklılıklar gösterebilmektedir.
       </p>
 
       <p>
-        Okul öncesi düzeyinde yaygınlık gösteren Montessori okulları, ilkokul düzeyinde de yeni yeni açılmaya başlamıştır. Fakat ilkokul düzeyindeki okulların hepsi Millî Eğitim Bakanlığı müfredatını uygulamakta sadece metodoloji olarak Montessori'yi kullanmaktadırlar.
+        Okul öncesi düzeyde yaygınlaşan Montessori okulları, ilkokul düzeyinde de yeni yeni açılmaktadır. Fakat ilkokul düzeyindeki okulların tamamı Millî Eğitim Bakanlığı müfredatını uygulamakta, sadece metodoloji olarak Montessori'yi kullanmaktadır.
       </p>
     </article>
 
