--- a/ogretmen-kadromuz.html
+++ b/ogretmen-kadromuz.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Öğretmen Kadromuz - Sirac Koleji</title>
+  <title>Öğretmen Kadromuz - 18 Mart Sirac Koleji</title>
+  <meta name="description" content="18 Mart Sirac Koleji'nin alanında uzman, deneyimli ve sevgi dolu öğretmen kadrosuyla tanışın. Öğrencilerimizin geleceğini şekillendiren değerli eğitimcilerimiz.">
+  <meta name="keywords" content="öğretmen kadrosu, eğitimciler, uzman öğretmenler, anaokulu öğretmeni, sınıf öğretmeni, branş öğretmenleri, Çanakkale özel okul, Sirac Koleji">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -107,7 +109,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Şengül Karaca Göktaş</h5>
             <p class="text-muted">Okul Müdürü</p>
-            <a href="mailto:sengul.goktas@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:sengul.goktas@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -121,7 +123,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Elif Soytaş</h5>
             <p class="text-muted">Müdür Yardımcısı</p>
-            <a href="mailto:elif.soytas@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:elif.soytas@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -135,7 +137,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Seda Nur Tekeli</h5>
             <p class="text-muted">İngilizce Öğretmeni</p>
-            <a href="mailto:sedanur.tekeli@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:sedanur.tekeli@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -149,7 +151,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Dilek Orhan</h5>
             <p class="text-muted">Görsel Sanatlar Öğretmeni</p>
-            <a href="mailto:dilek.orhan@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:dilek.orhan@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -163,7 +165,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Beyzanur Ateş</h5>
             <p class="text-muted">Matematik Öğretmeni</p>
-            <a href="mailto:beyzanur.ates@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:beyzanur.ates@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -177,7 +179,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Melike Nur Sezer</h5>
             <p class="text-muted">Anaokulu Öğretmeni</p>
-            <a href="mailto:melikenur.sezer@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:melikenur.sezer@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -191,7 +193,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Mustafa Kubilay Ergül</h5>
             <p class="text-muted">Beden Eğitimi Öğretmeni</p>
-            <a href="mailto:mustafa@okul.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:mustafa.ergul@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -205,7 +207,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Furkan Köksal</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
-            <a href="mailto:furkan.koksal@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:furkan.koksal@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -219,7 +221,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Başak Kökçak</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
-            <a href="mailto:basak.kokcak@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:basak.kokcak@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -233,7 +235,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Hatice Şuheda Bayram</h5>
             <p class="text-muted">Psikolojik Danışman</p>
-            <a href="mailto:hatice.bayram@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:hatice.bayram@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -247,7 +249,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Figen Aksoy</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
-            <a href="mailto:figen.aksoy@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:figen.aksoy@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -261,7 +263,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Zeynep Topçu</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
-            <a href="mailto:zeynep.topcu@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:zeynep.topcu@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -275,7 +277,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Şeyma Işık</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
-            <a href="mailto:seyma.isik@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:seyma.isik@18martsirackoleji.k12.tr" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -294,7 +296,7 @@
           <i class="fas fa-child"></i>
           <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2016 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -337,7 +339,7 @@
     </div>
     
     <div class="copyright">
-      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2016-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
