--- a/tarihce.html
+++ b/tarihce.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarihçe - Sirac Koleji</title>
+  <title>Okul Kültürü ve Tarihçe - 18 Mart Sirac Koleji</title>
+  <meta name="description" content="18 Mart Sirac Koleji'nin köklü geçmişi ve güçlü okul kültürü hakkında bilgi edinin. İşbirliği, dürüstlük ve bütünsel gelişim ilkeleriyle geleceğe umutla bakan nesiller yetiştiriyoruz.">
+  <meta name="keywords" content="okul kültürü, tarihçe, kuruluş, işbirliği, dürüstlük, bütünsel gelişim, Çanakkale özel okul, Sirac Koleji">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
+ 
 </head>
 <body>
 
@@ -15,8 +18,8 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+     <div class="navbar-brand d-flex align-items-center">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -36,8 +39,8 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
               <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item active" href="tarihce.html">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
+              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
+              <li><a class="dropdown-item active" href="kultur.html">Okul Kültürü</a></li>
             </ul>
           </li>
 
@@ -74,8 +77,8 @@
               <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
+         <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link " href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
           <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
         </ul>
       </div>
@@ -86,7 +89,7 @@
 <!-- HERO -->
 <section class="hero-section">
   <div class="container">
-    <h1>Kuruluş Tarihçemiz</h1>
+    <h1>Okul Kültürü</h1>
     <p>Montessori destekli yaklaşımımızla özgüvenli, erdemli, üretken ve değerlerine sahip çıkan bireyler yetiştiriyoruz.</p>
   </div>
 </section>
@@ -104,7 +107,7 @@
       <div class="col-lg-6">
         <div class="history-image rounded-4 overflow-hidden shadow-lg">
           <img src="../image/anasayfa1.JPG" 
-               alt="Okul binamız" class="img-fluid w-100">
+               alt="18 Mart Sirac Koleji Okul Binası" class="img-fluid w-100">
           <div class="year-badge">2016</div>
         </div>
       </div>
@@ -213,7 +216,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('path/to/subtle-pattern.png') repeat;
+    background: url('../image/anasayfa1.JPG') repeat;
     opacity: 0.05;
     z-index: 0;
   }
@@ -333,6 +336,8 @@
     }
   }
 </style>
+
+
 <!-- FOOTER -->
 <footer>
   <div class="container">
@@ -342,7 +347,7 @@
           <i class="fas fa-child"></i>
           <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2016 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
