--- a/kulupler.html
+++ b/kulupler.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kulüpler ve P4C - Sirac Koleji</title>
+  <title>Öğrenci Kulüpleri ve P4C - 18 Mart Sirac Koleji</title>
+  <meta name="description" content="18 Mart Sirac Koleji'nde öğrencilerimizin ilgi alanlarını ve yeteneklerini keşfetmelerini sağlayan okuma, teknoloji, müzik, sanat, spor ve bilim kulüplerimiz hakkında bilgi alın.">
+  <meta name="keywords" content="öğrenci kulüpleri, P4C, çocuklar için felsefe, okul kulüpleri, sosyal etkinlikler, yetenek gelişimi, Çanakkale özel okul, Sirac Koleji">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -663,7 +665,7 @@
           <i class="fas fa-child"></i>
           <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p class="mb-4">2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p class="mb-4">2016 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon me-2"><i class="fab fa-facebook-f fa-lg"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon me-2"><i class="fab fa-instagram fa-lg"></i></a>
@@ -706,7 +708,7 @@
     </div>
     
     <div class="copyright pt-4 mt-4 border-top text-center">
-      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2016-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
