--- a/misyon.html
+++ b/misyon.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Misyon & Vizyon - Sirac Koleji</title>
+  <title>Misyon ve Vizyon - 18 Mart Sirac Koleji</title>
+  <meta name="description" content="18 Mart Sirac Koleji olarak misyonumuz, köklü medeniyet mirasımıza sahip çıkan, üretken ve sorumluluk sahibi nesiller yetiştirmektir. Vizyonumuz ise kendini gerçekleştirmiş, iletişim becerileri yüksek bireyler yetiştiren öncü bir kurum olmaktır.">
+  <meta name="keywords" content="misyon, vizyon, eğitim felsefesi, hedefler, amaçlar, medeniyet mirası, üretken nesiller, Çanakkale özel okul, Sirac Koleji">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -113,7 +115,7 @@
           <p class="mb-4">18 Mart Sirac Koleji olarak tüm zamanlarda insanlığa ilim, edep, ahlak, medeniyet gibi birçok konuda katkıda bulunmuş olan ecdadını örnek alıp köklü medeniyet mirasına sahip çıkan nesiller yetiştirmeyi amaçlamaktayız.</p>
           <p>Eğitim ve öğretim faaliyetlerimizde alternatif modeller kullanarak öğrencilerimizin her bilgiyi özgür doğasının içerisinde keşfetmesini sağlıyoruz. Bilgiyi üretken olarak kullanabilen, sorumluluk alabilen ve yaşam gayesinin farkında olan bireyler yetiştiriyoruz.</p>
           <div class="signature mt-4">
-            <img src="../image/misyon_vizyon_1jpg_1.jpg" alt="İmza" class="img-fluid" width="120">
+            <img src="../image/misyon_vizyon_1jpg_1.jpg" alt="Sirac Koleji Misyon" class="img-fluid" width="120">
           </div>
         </div>
       </div>
@@ -128,7 +130,7 @@
           <p class="mb-4">Geleceğe bakışımız; kendini gerçekleştirme yolunda ilerleyen, aldığı değerler eğitimi ile iç huzurunu sağlamış, başladığı işi başarıyla tamamlama yetisine sahip bireyler yetiştirmektir.</p>
           <p>Kendini ifade edebilen, iletişim kurma becerisi yüksek nesiller yetiştiren ve toplumları ayırmaksızın eğitim öğretim ihtiyaçlarını karşılayan bir kurum olmayı hedefliyoruz. Bu vizyonla her geçen gün kendimizi geliştiriyor ve eğitim standartlarımızı yükseltiyoruz.</p>
           <div class="signature mt-4">
-            <img src="../image/misyon_vizyon_1jpg_1.jpg" alt="İmza" class="img-fluid" width="120">
+            <img src="../image/misyon_vizyon_1jpg_1.jpg" alt="Sirac Koleji Vizyon" class="img-fluid" width="120">
           </div>
         </div>
       </div>
@@ -245,7 +247,7 @@
           <i class="fas fa-child"></i>
           <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2016 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -288,7 +290,7 @@
     </div>
     
     <div class="copyright">
-      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2016-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
