--- a/rehberlik.html
+++ b/rehberlik.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rehberlik - Sirac Koleji</title>
+  <title>Rehberlik ve Psikolojik Danışmanlık - 18 Mart Sirac Koleji</title>
+  <meta name="description" content="18 Mart Sirac Koleji olarak, öğrenci, veli ve öğretmenlerimize yönelik kapsamlı rehberlik ve psikolojik danışmanlık hizmetleri sunuyoruz. Bütünsel gelişim için yanınızdayız.">
+  <meta name="keywords" content="rehberlik, psikolojik danışmanlık, öğrenci rehberliği, veli rehberliği, öğretmen rehberliği, akademik takip, mesleki rehberlik, Çanakkale özel okul, Sirac Koleji">
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
-  <img src="../image/siraj logo.jpg" alt="Blue and white logo for 18 Mart Sirac Koleji featuring a stylized human figure reaching for a star with wings, geometric shapes in the background, and the text 18 MART SIRAC KOLEJI www.18MartSiracKoleji.com Egitimin En Kıymetli Hali; the design conveys inspiration, achievement, and educational excellence" class="rounded-circle me-2" style="width: 50px; height: 50px;">
+  <img src="../image/siraj logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
   <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
@@ -417,7 +419,7 @@
           <i class="fas fa-child"></i>
           <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2016 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -460,7 +462,7 @@
     </div>
     
       <div class="copyright">
-      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2016-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
